--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             nos ayudan de manera
          exagerada a la hora de diseñar sitios webs.
     </section>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
     <script src="menu.js"></script>
 </body>
 </html>
